fix: fixed a bug where hours was being cut off

--- a/css/style.css
+++ b/css/style.css
@@ -233,17 +233,28 @@ nav li {
 @media screen and (max-width: 390px) {
   .main-landing {
     background-size: cover;
-    height: 600px;
+    height: 500px;
     background-position: top;
-    font-size: .5em;
+    font-size: .35em;
+  }
+
+  .blonde-highlight {
+    width: 36%;
+  }
+
+  .main-info {
+    width: 50%;
+    padding: 0 0 0 0;
   }
   
   .hours-vertical {
-    margin-top: 0;
+    margin-top: 100px;
+    font-size: 2em;
+    font-weight: bold;
   }
 
   .arrows {
-    margin-top: 175px;
+    margin-top: 425px;
   }
   .first-visit {
     width: 75%;
